--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "tcomb-form-native": "^0.5.0"
   },
   "peerDependencies": {
-    "react-native": ">=0.25.0"
+    "react-native": ">=0.25.0 <1.0.0"
   }
 }
