--- a/package.json
+++ b/package.json
@@ -25,7 +25,5 @@
     "tcomb-form-native": "^0.5.0",
     "react-native-image-zoom": "^0.24.0"
   },
-  "peerDependencies": {
-    "react-native": ">=0.25.0 <1.0.0"
-  }
+  "peerDependencies": {}
 }
