--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-rnkit",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "React Native UI kit",
   "main": "index.js",
   "directories": {
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/bjyas/rnkit#readme",
   "dependencies": {
     "@remobile/react-native-toast": "^1.0.4",
-    "react-native-image-zoom": "^0.27.0",
+    "react-native-gallery": "0.0.17",
     "tcomb-form-native": "^0.6.0"
   },
   "peerDependencies": {}
