--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-rnkit",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "React Native UI kit",
   "main": "index.js",
   "directories": {
@@ -27,7 +27,7 @@
   "dependencies": {
     "@remobile/react-native-toast": "^1.0.4",
     "react-native-actionsheet": "^2.0.4",
-    "react-native-photo-browser": "^0.2.2",
+    "@bjyas/react-native-photo-browser": "^0.3.0",
     "tcomb-form-native": "^0.6.0"
   },
   "peerDependencies": {}
